# auction-backend

./: .env  .gitignore  db.sqlite3  justfile  main.py  package.json  pnpm-lock.yaml  pyproject.toml
auctions/: admin.py  consumers.py  models.py  routing.py  serializers.py  tasks.py  urls.py  views.py
auctions/management/commands/: populate.py
auctions/migrations/: 0001_initial.py
backend/: __init__.py  asgi.py  celery.py  settings.py  urls.py  views.py
users/: admin.py  models.py  serializers.py  views.py
